@@ -162,10 +162,29 @@ void OvmsVehicleMgEv::IncomingBmsPoll(
             break;
         case batterySoCPid:
             {
-                auto soc = value / 10.0;
+                // Get selection from features page
+                bool updatedbmu = MyConfig.GetParamValueBool("xmg", "updatedbmu", true);
+                float scaledSoc;
+                int lowerlimit;
+                int upperlimit;
+                // Get raw value to display on Charging Metrics Page
+                m_soc_raw->SetValue(value / 10);
+                // Setup upper and lower limits
+                if (updatedbmu)
+                {
+                    //New BMU firmware DoD range 40 - 940
+                    lowerlimit = 40;
+                    upperlimit = 940;
+                } else {
+                    //Original BMU firmware DoD range 60 - 970
+                    lowerlimit = 60;
+                    upperlimit = 970;
+                }
+                // Calculate SOC from upper and lower limits
+                scaledSoc = (value - lowerlimit) * 100 / (upperlimit - lowerlimit);
                 if (StandardMetrics.ms_v_charge_inprogress->AsBool())
                 {
-                    if (soc < 96.5)
+                    if (scaledSoc < 99.5)
                     {
                         StandardMetrics.ms_v_charge_state->SetValue("charging");
                     }
@@ -175,12 +194,10 @@ void OvmsVehicleMgEv::IncomingBmsPoll(
                     }
                 }
                 
-                // DoD is approx 6% - 97%, so we need to scale it
-                auto scaledSoc = ((soc * 106.0) / 97.0) - 6.0;
+                // Save SOC for display
                 StandardMetrics.ms_v_bat_soc->SetValue(scaledSoc);
                 // Ideal range set to SoC percentage of 262 km (WLTP Range)
                 StandardMetrics.ms_v_bat_range_ideal->SetValue(262 * (scaledSoc / 100));
-                m_soc_raw->SetValue(soc);
             }
             break;
         case bmsStatusPid:
