@@ -65,9 +65,64 @@ using namespace std;
 void OvmsVehicleMgEv::WebInit()
 {
     // vehicle menu:
+    MyWebServer.RegisterPage("/xmg/features", "Features", WebCfgFeatures, PageMenu_Vehicle, PageAuth_Cookie);
+    MyWebServer.RegisterPage("/xmg/cellmon", "BMS cell monitor", OvmsWebServer::HandleBmsCellMonitor, PageMenu_Vehicle, PageAuth_Cookie);
+    MyWebServer.RegisterPage("/xmg/metrics_charger", "Charging Metrics", WebDispChgMetrics, PageMenu_Vehicle, PageAuth_Cookie);
+}
+
+/**
+ * WebDeInit: deregister pages
+ */
+void OvmsVehicleMgEv::WebDeInit()
+{
+  MyWebServer.DeregisterPage("/xmg/features");
+  MyWebServer.DeregisterPage("/xmg/metrics_charger");
+  MyWebServer.DeregisterPage("/xmg/battmon");
+}
+
+/**
+ * WebCfgFeatures: configure general parameters (URL /xmg/config)
+ */
+void OvmsVehicleMgEv::WebCfgFeatures(PageEntry_t &p, PageContext_t &c)
+{
+    std::string error;
+    bool updatedbmu;
     
-    MyWebServer.RegisterPage("/bms/cellmon", "BMS cell monitor", OvmsWebServer::HandleBmsCellMonitor, PageMenu_Vehicle, PageAuth_Cookie);
-    MyWebServer.RegisterPage("/bms/metrics_charger", "Charging Metrics", WebDispChgMetrics, PageMenu_Vehicle, PageAuth_Cookie);
+    if (c.method == "POST") {
+        updatedbmu = (c.getvar("updatedbmu") == "yes");
+        
+        if (error == "") {
+          // store:
+          MyConfig.SetParamValueBool("xmg", "updatedbmu", updatedbmu);
+          
+          c.head(200);
+          c.alert("success", "<p class=\"lead\">MG ZS EV / MG5 feature configuration saved.</p>");
+          MyWebServer.OutputHome(p, c);
+          c.done();
+          return;
+        }
+        // output error, return to form:
+        error = "<p class=\"lead\">Error!</p><ul class=\"errorlist\">" + error + "</ul>";
+        c.head(400);
+        c.alert("danger", error.c_str());
+    } else {
+        // read configuration:
+        updatedbmu = MyConfig.GetParamValueBool("xmg", "updatedbmu", false);
+        c.head(200);
+    }
+    // generate form:
+    c.panel_start("primary", "MG ZS EV / MG5 ffeature configuration");
+    c.form_start(p.uri);
+
+    c.fieldset_start("General");
+    c.input_checkbox("Updated BMU Firmware", "updatedbmu", updatedbmu,
+      "<p>Select this if you have BMU Firmware later than Jan 2021</p>");
+    c.fieldset_end();
+    c.print("<hr>");
+    c.input_button("default", "Save");
+    c.form_end();
+    c.panel_end();
+    c.done();
 }
 
 /**
