@@ -174,6 +174,10 @@ OvmsVehicleMgEv::~OvmsVehicleMgEv()
     ESP_LOGI(TAG, "Shutdown MG EV vehicle module");
 
     //xTimerDelete(m_zombieTimer, 0);
+    
+    #ifdef CONFIG_OVMS_COMP_WEBSERVER
+        WebDeInit();
+    #endif
 
     if (m_cmdSoftver)
     {
